Fix spacing issue

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,5 +1,5 @@
 .about {
-    padding: 15% 10%;
+    padding: 5% 10%;
     display: flex;
     align-items: flex-start;
 }
@@ -57,16 +57,12 @@
     text-transform: lowercase;
     border-radius: 50px;
     margin: 0;
-    font-family: 'Orbit', sans-serif;
+    font-family: 'Orbit', sans-se rif;
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.3),
 only screen and (min-resolution: 125dpi) {
 
-
-.about{
-    padding: 50% 10%;
-}
 
     .about-skills {
         padding: 0 0 0 5%;
